# EmailMe

./: .env  .gitignore  README.md  docker-compose.yml  system_architecture.drawio
EmailService/: Dockerfile
EmailService/emailme.emailservice/: pyproject.toml  startup.sh
EmailService/emailme.emailservice/emailme_emailservice/: startup.py
EmailService/emailme.emailservice/emailme_emailservice/commands/: email_command.py
EmailService/emailme.emailservice/emailme_emailservice/handlers/: email_handler.py
EmailService/emailme.emailservice/tests/: test_emailme_emailservice.py
PrivatePyPi/: Dockerfile
WebService/: Dockerfile
WebService/emailme.webservice/: README.md  pyproject.toml  startup.sh
WebService/emailme.webservice/emailme_webservice/: manage.py
WebService/emailme.webservice/emailme_webservice/emailme_webservice/: asgi.py  forms.py  settings.py  urls.py  views.py  wsgi.py
WebService/emailme.webservice/emailme_webservice/emailme_webservice/templates/emailme_webservice/: index.html  layout.html
WebService/emailme.webservice/tests/: test_emailme_webservice.py
