[tool.poetry]
name = "emailme.emailservice"
version = "0.1.0"
description = ""
authors = ["zuhairmhtb <zuhairmhtb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyMessagingFramework = "^1.1.0"
twine = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "ppypi"
url = "http://privatepypi:8080/simple"