[tool.poetry]
name = "emailme.webservice"
version = "0.1.0"
description = ""
authors = ["zuhairmhtb <zuhairmhtb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "3.2"
PyMessagingFramework = "^1.1.0"
"emailme.emailservice" = {version = "^0.1.0", source = "ppypi"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "ppypi"
url = "http://127.0.0.1:8010/simple"
